--- a/pakWin/modWinMain.lfm
+++ b/pakWin/modWinMain.lfm
@@ -1,8 +1,8 @@
-object Form1: TForm1
+object winMain: TwinMain
   Left = 520
   Height = 240
   Top = 165
   Width = 320
-  Caption = 'Form1'
+  Caption = 'Свободная электрика'
   LCLVersion = '5.7'
 end
