37 Добавлены строки для первоначального вывода текста на форме по сечению проводов.

--- a/pakWin/modWinSize.lfm
+++ b/pakWin/modWinSize.lfm
@@ -1,8 +1,65 @@
 object winSize: TwinSize
   Left = 540
-  Height = 240
+  Height = 433
   Top = 155
-  Width = 320
-  Caption = 'Площадь сечения'
+  Width = 765
+  Caption = 'Площадь сечения проводов'
+  ClientHeight = 433
+  ClientWidth = 765
   LCLVersion = '5.7'
+  object txtSize: TMemo
+    Left = 0
+    Height = 321
+    Hint = 'Список сечения проводов'
+    Top = 112
+    Width = 758
+    Font.CharSet = RUSSIAN_CHARSET
+    Font.Height = -12
+    Font.Name = 'Consolas'
+    Font.Pitch = fpFixed
+    Font.Quality = fqDraft
+    Lines.Strings = (
+      '+------------------------+--------------------------------------+-----------------------------------+'
+      '|Сеченине токопроводящей |   Провода  Напряжение в 220 В        |      Напряжение в 380 В           |'
+      '|     жилы, мм²          |                                      |                                   |'
+      '|------------------------+--------------------------------------+-----------------------------------+'
+      '|                        | Сила тока, А  |   Мощность тока, кВт | Сила тока, А |  Мощность тока, кВт|'
+      '|------------------------+--------------------------------------+-----------------------------------+'
+      '|       1,5              |         19    |          4,1         |       16     |        10,5        |'
+      '|       2,5              |         27    |          5,9         |       25     |        16,5        |'
+      '|       4                |         38    |          8,3         |       30     |        19,8        |'
+      '|       6                |         46    |         10,1         |       40     |        26,4        |'
+      '|      10                |         70    |         15,4         |       50     |        33,0        |'
+      '|      16                |         85    |         18,7         |       75     |        49,5        |'
+      '|      25                |        115    |         25,3         |       90     |        59,4        |'
+      '|      35                |        135    |         29,7         |      115     |        75,9        |'
+      '|      50                |        175    |         38,5         |      145     |        95,7        |'
+      '|      70                |        215    |         47,3         |      180     |       118,8        |'
+      '|      95                |        260    |         57,2         |      220     |       145,2        |'
+      '|     120                |        300    |         66,0         |      260     |       171,6        |'
+      '+------------------------+--------------------------------------+-----------------------------------+'
+    )
+    ParentFont = False
+    ParentShowHint = False
+    ReadOnly = True
+    ShowHint = True
+    TabOrder = 0
+  end
+  object btn1WireCu: TButton
+    Left = 8
+    Height = 21
+    Top = 7
+    Width = 114
+    Caption = '1 провод (медь)'
+    OnClick = btn1WireCuClick
+    TabOrder = 1
+  end
+  object btn1WireAl: TButton
+    Left = 8
+    Height = 20
+    Top = 32
+    Width = 116
+    Caption = '1 провод (алюминий)'
+    TabOrder = 2
+  end
 end
